Add more info to README about external examples

--- a/README.html
+++ b/README.html
@@ -745,20 +745,24 @@ background-color: rgba(180, 237, 95, 0.5);
 <tr class="header">
 <th>Sample Name</th>
 <th>Link</th>
+<th>Platform</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
 <td>Visual COBOL For Java Developers Book/Chapter 7</td>
 <td><a href="https://github.com/MicroFocus/visual-cobol-for-java-developers-book/tree/master/chapter-07/MFUnit">Git Repo</a></td>
+<td>JVM</td>
 </tr>
 <tr class="even">
 <td>Visual COBOL For Java Developers Book/Chapter 9</td>
 <td><a href="https://github.com/MicroFocus/visual-cobol-for-java-developers-book/tree/master/chapter-09/complete">Git Repo</a></td>
+<td>JVM</td>
 </tr>
 <tr class="odd">
 <td>Airport Sample</td>
 <td><a href="https://github.com/MicroFocus/Airport-Sample">Git Repo</a></td>
+<td>Native</td>
 </tr>
 </tbody>
 </table>
